fix responsiveness on mobile and tablet screen

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,5 @@
 @media screen and (min-width: 480px){
+
     .header-top-info .row div:first-child span{
         display: inline-block!important;
         margin-right: 1.5rem;
@@ -17,6 +18,21 @@
         grid-template-columns: repeat(2, 1fr);
         column-gap: 1rem;
     }
+    /* responsive */
+    .newsletter p{
+       font-size: 1.1rem;
+       width: 90%;
+    }
+    .newsletter form input[type="email"]{
+        font-size: 1.2rem;
+    }
+    .testimonial-heading span {
+        font-size: 1.8rem;
+    }
+    .testimonial-heading h1 {
+        font-size: 1.2rem;
+    }
+    
 }
 
 
@@ -54,6 +70,17 @@
     footer .row{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+    }
+    /* responsive */
+    .newsletter p{
+        font-size: 1.2rem;
+        width: 90%;
+    }
+    .newsletter form input[type="email"]{
+        font-size: 1.2rem;
+    }
+    .testimonial-heading span {
+        font-size: 3rem;
     }
 }
 
@@ -145,6 +172,7 @@
     .skill .img-container img{
         margin-top: 2rem;
     }
+    
 }
 
 @media screen and (min-width: 1200px){
