--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
+
 
 body {
   font-family: "Poppins", sans-serif;
@@ -152,6 +154,7 @@ header .container {
   background-color: var(--darkTwo);
   border-radius: 3px;
   transition: 0.5s;
+  overflow-x: unset;
 }
 
 .bar::before,
@@ -284,6 +287,7 @@ header .container {
   .hamburger-menu {
     display: flex;
   }
+
 
   .links {
     position: fixed;
